yaml/sound-buzz.live/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subsonic
spec:
  replicas: 1
  selector:
   matchLabels:
    app: subsonic
  template:
    metadata:
      labels:
        app: subsonic
    spec:
      containers:
      - name: subsonic
        image: hurricane/subsonic
        ports:
        - containerPort: 80
        volumeMounts:
        - name: subsonic
          mountPath: /subsonic
        - name: music
          mountPath: /music
      volumes:
      - name: subsonic
        persistentVolumeClaim:
          claimName: subsonic
      - name: music
        persistentVolumeClaim:
          claimName: music
