yaml/sound-buzz.live/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subsonic
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: subsonic
