yaml/sound-buzz.live/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: subsonic-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: subsonic-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.sound-buzz.live`)
      kind: Rule
      middlewares:
        - name: subsonic-redirect      
      services:
        - name: subsonic
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: subsonic-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.sound-buzz.live`)
      kind: Rule
      services:
        - name: subsonic
          port: 80
  tls:
    certResolver: pebble
